--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "0.9.5",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^0.9.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "uniforms": "^2.6.5",
